# rangos-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  run.sh
apps/backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/app/: main.py
apps/backend/app/core/: config.py
apps/backend/app/database/: __init__.py  database.py
docs/qa/: traceability-matrix.md
docs/qa/test-cases/: readme.md
docs/qa/test-cases/auth/: RF-01 - signup.md  RF-02 - login.md  RF-03 - update-profile.md
docs/sdlc/: 01-planning.md  02-requirements.md  03-architecture.md  04-testing.md  05-development.md  06-deployment.md  07-roadmap.md
