[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rangos-api"
version = "0.1.0"
description = "REST API for the Rangos delivery platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name ="Dienay Lima"}
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "pydantic-settings>=2.3.1",
  "python-dotenv>=1.0.1",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=7.1.0",
  "httpx>=0.27.0",
  "polyfactory>=2.16.0",
  "freezegun>=1.5.1",
  "ruff>=0.5.0",
  "pyright>=1.1.380",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "app"]
testpaths = ["tests", "../../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v --tb=short --cov=app --cov-report=term-missing"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C90"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
